--- a/notebooks/KoBERT.ipynb
+++ b/notebooks/KoBERT.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "historic-reservation",
+   "id": "sacred-artwork",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "optimum-workplace",
+   "id": "regulation-greece",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "moved-remedy",
+   "id": "increased-throat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "social-insider",
+   "id": "christian-building",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "persistent-zimbabwe",
+   "id": "robust-contest",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "static-mailing",
+   "id": "advance-occasions",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "planned-faculty",
+   "id": "elder-moore",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bridal-penguin",
+   "id": "mature-cycle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "dated-pharmacology",
+   "id": "binary-costa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fluid-edwards",
+   "id": "impressive-titanium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "consistent-emission",
+   "id": "dominant-reset",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "downtown-strength",
+   "id": "danish-criticism",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pleased-satellite",
+   "id": "broken-nancy",
    "metadata": {},
    "source": [
     "## Fine tuning"
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "electric-wrestling",
+   "id": "monetary-sympathy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "common-instrumentation",
+   "id": "occupational-bradley",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "overall-transition",
+   "id": "weekly-poetry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "intended-minority",
+   "id": "antique-board",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lesser-configuration",
+   "id": "individual-macedonia",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,10 @@
      "output_type": "stream",
      "text": [
       "epoch 1 batch id 1 loss 0.7098344564437866 train acc 0.5\n",
-      "epoch 1 batch id 201 loss 0.5460638999938965 train acc 0.5666977611940298\n"
+      "epoch 1 batch id 201 loss 0.5460638999938965 train acc 0.5666977611940298\n",
+      "epoch 1 batch id 401 loss 0.48434382677078247 train acc 0.6744856608478803\n",
+      "epoch 1 batch id 601 loss 0.4649675488471985 train acc 0.7239236688851913\n",
+      "epoch 1 batch id 801 loss 0.5512837171554565 train acc 0.7518921660424469\n"
      ]
     }
    ],
@@ -507,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "better-contribution",
+   "id": "stupid-original",
    "metadata": {},
    "outputs": [],
    "source": []
