--- a/notebooks/KoBERT.ipynb
+++ b/notebooks/KoBERT.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "sacred-artwork",
+   "id": "piano-acoustic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "regulation-greece",
+   "id": "gentle-preview",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "increased-throat",
+   "id": "adolescent-efficiency",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "christian-building",
+   "id": "qualified-point",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "robust-contest",
+   "id": "municipal-coach",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "advance-occasions",
+   "id": "agreed-father",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "elder-moore",
+   "id": "level-mouse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "mature-cycle",
+   "id": "classical-apple",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "binary-costa",
+   "id": "breeding-pixel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "impressive-titanium",
+   "id": "large-italy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "dominant-reset",
+   "id": "minor-copying",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "danish-criticism",
+   "id": "romance-wildlife",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "broken-nancy",
+   "id": "suburban-offense",
    "metadata": {},
    "source": [
     "## Fine tuning"
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "monetary-sympathy",
+   "id": "suited-czech",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "occupational-bradley",
+   "id": "rough-myanmar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "weekly-poetry",
+   "id": "equal-antique",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "antique-board",
+   "id": "copyrighted-advancement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,8 +436,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "individual-macedonia",
+   "execution_count": 34,
+   "id": "lyric-rochester",
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,209 @@
       "epoch 1 batch id 201 loss 0.5460638999938965 train acc 0.5666977611940298\n",
       "epoch 1 batch id 401 loss 0.48434382677078247 train acc 0.6744856608478803\n",
       "epoch 1 batch id 601 loss 0.4649675488471985 train acc 0.7239236688851913\n",
-      "epoch 1 batch id 801 loss 0.5512837171554565 train acc 0.7518921660424469\n"
+      "epoch 1 batch id 801 loss 0.5512837171554565 train acc 0.7518921660424469\n",
+      "epoch 1 batch id 1001 loss 0.42420637607574463 train acc 0.7658123126873126\n",
+      "epoch 1 batch id 1201 loss 0.49051886796951294 train acc 0.7781015820149875\n",
+      "epoch 1 batch id 1401 loss 0.5262107849121094 train acc 0.7855884189864383\n",
+      "epoch 1 batch id 1601 loss 0.44049566984176636 train acc 0.7925320112429731\n",
+      "epoch 1 batch id 1801 loss 0.44042542576789856 train acc 0.7983932537479178\n",
+      "epoch 1 batch id 2001 loss 0.438401997089386 train acc 0.8039183533233384\n",
+      "epoch 1 batch id 2201 loss 0.477384090423584 train acc 0.8082121762835075\n",
+      "epoch 1 train acc 0.8112867960750854\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-34-e6a38b13095b>:22: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
+      "  for batch_id, (token_ids, valid_length, segment_ids, label) in enumerate(tqdm_notebook(test_dataloader)):\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5cdf2902442d4d3a810f2d15c376d27b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/782 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 1 test acc 0.8600343670076727\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "af43fd0568df46a8979f2dbdeb3e2b88",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2344 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 2 batch id 1 loss 0.4896039068698883 train acc 0.828125\n",
+      "epoch 2 batch id 201 loss 0.4185541570186615 train acc 0.8530783582089553\n",
+      "epoch 2 batch id 401 loss 0.4374520778656006 train acc 0.8576215710723192\n",
+      "epoch 2 batch id 601 loss 0.4948432743549347 train acc 0.860700915141431\n",
+      "epoch 2 batch id 801 loss 0.5192050933837891 train acc 0.862105961298377\n",
+      "epoch 2 batch id 1001 loss 0.4511871635913849 train acc 0.8642763486513486\n",
+      "epoch 2 batch id 1201 loss 0.41489556431770325 train acc 0.8659450457951707\n",
+      "epoch 2 batch id 1401 loss 0.4346323311328888 train acc 0.8660666488222698\n",
+      "epoch 2 batch id 1601 loss 0.47707274556159973 train acc 0.8671435821361649\n",
+      "epoch 2 batch id 2001 loss 0.45090818405151367 train acc 0.8690342328835582\n",
+      "epoch 2 batch id 2201 loss 0.42931118607521057 train acc 0.8702791344843253\n",
+      "epoch 2 train acc 0.8716514682878271\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f19ab6e7775449eba7f9ca50fe8e7991",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/782 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 2 test acc 0.8761988491048593\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8a159a4d1e554929846b0e2dff2994cd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2344 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 3 batch id 1 loss 0.48991942405700684 train acc 0.796875\n",
+      "epoch 3 batch id 201 loss 0.3644742965698242 train acc 0.8857276119402985\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOPub message rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_msg_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 3 batch id 1201 loss 0.3669576644897461 train acc 0.8933831182348043\n",
+      "epoch 3 batch id 1401 loss 0.3866939842700958 train acc 0.8933239650249821\n",
+      "epoch 3 batch id 1601 loss 0.3914433717727661 train acc 0.8940603529044348\n",
+      "epoch 3 batch id 1801 loss 0.41588982939720154 train acc 0.8954053303720155\n",
+      "epoch 3 batch id 2001 loss 0.4139482378959656 train acc 0.8960207396301849\n",
+      "epoch 3 batch id 2201 loss 0.3899887800216675 train acc 0.8965385052248978\n",
+      "epoch 3 train acc 0.8975731477531286\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0c8569716be14dad929848f7b9a6216b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/782 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 3 test acc 0.8864490089514067\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "67f1251fc4364f34b7dbc2e5be42e58e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2344 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 4 batch id 1 loss 0.4850531816482544 train acc 0.828125\n",
+      "epoch 4 batch id 201 loss 0.37437599897384644 train acc 0.9067164179104478\n",
+      "epoch 4 batch id 401 loss 0.3566151261329651 train acc 0.9098347880299252\n",
+      "epoch 4 batch id 601 loss 0.43556728959083557 train acc 0.9124116056572379\n",
+      "epoch 4 batch id 801 loss 0.42909952998161316 train acc 0.9142478152309613\n",
+      "epoch 4 batch id 1001 loss 0.4396789073944092 train acc 0.9150068681318682\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-34-e6a38b13095b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoken_ids\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msegment_ids\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloss_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclip_grad_norm_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_grad_norm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/image_crawler/lib/python3.8/site-packages/torch/_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    305\u001b[0m                 \u001b[0mcreate_graph\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    306\u001b[0m                 inputs=inputs)\n\u001b[0;32m--> 307\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    308\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    309\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/image_crawler/lib/python3.8/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    152\u001b[0m         \u001b[0mretain_graph\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    153\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 154\u001b[0;31m     Variable._execution_engine.run_backward(\n\u001b[0m\u001b[1;32m    155\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    156\u001b[0m         allow_unreachable=True, accumulate_grad=True)  # allow_unreachable flag\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -510,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stupid-original",
+   "id": "previous-category",
    "metadata": {},
    "outputs": [],
    "source": []
